# badmobile

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: blank.yml  config.yml
.github/workflows/config/: application_config.json
cmake/: code-coverage.cmake
config/: application_config.json
doc/: README.md
src/: buffer.h  cmd_vel_socket.hpp  driving.cc  imu_socket.hpp  imu_test.cc  iopoc.cc  lsm9ds1.cc  main.cc  main_buffer.cc  motor.cc  settings_socket.hpp  simulate_app.cc  state.h  vehicel_parameters.h  vehicle_parameters.h
src/bno055/: bno055driver.hpp  getbno055.h  i2c_bno055.c
src/lsm9ds1/: config.hpp  lsm9ds1.h  lsm9ds1_v2.h  lsm9ds1driver.hpp
src/models/: kinematics.hpp
src/msg/: imu_msg.hpp
test/: bno055.cc  buffer.cc  config.cc  lowpass.cc  state.cc
ui/: elm.json  elm.min.js  index.html
ui/src/: FakeImu.elm  Imu.elm  ImuViz.elm  LivePlot.elm  Main.elm  RobotConfig.elm  Robotconfig.elm  Style.elm  Teleop.elm
